force-app/main/default/objects/Wishlist__c/Wishlist__c.object-meta.xml
<CustomObject>
    <label>Wishlist</label>
    <nameField>
        <displayFormat>wish-{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wishlists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>