force-app/main/default/objects/Wishlist__c/fields/Assigned_SA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned SA</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Wishlists (Assigned)</relationshipLabel>
    <relationshipName>Wishlists1</relationshipName>
    <type>Lookup</type>
</CustomField>