force-app/main/default/objects/Wishlist__c/fields/Creation_SA__c.field-meta.xml
<CustomField>
    <fullName>Creation_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the SA</description>
    <label>Creation SA</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Wishlists</relationshipLabel>
    <relationshipName>Wishlists</relationshipName>
    <type>Lookup</type>
</CustomField>