force-app/main/default/objects/Wishlist__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Wishlists</relationshipLabel>
    <relationshipName>Wishlists</relationshipName>
    <type>Lookup</type>
</CustomField>