force-app/main/default/objects/Wishlist__c/fields/Product_size__c.field-meta.xml
<CustomField>
    <fullName>Product_size__c</fullName>
    <description>Selected product size</description>
    <label>Product size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>