force-app/main/default/objects/Wishlist__c/fields/Wishlist_ID__c.field-meta.xml
<CustomField>
    <fullName>Wishlist_ID__c</fullName>
    <description>wishlist unique identifier</description>
    <label>Wishlist ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>